ggplot layer definition

--- a/8. Simple visualization.ipynb
+++ b/8. Simple visualization.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +127,27 @@
    ],
    "source": [
     "ggplot(data = penguins) + geom_point(mapping = aes(x=flipper_length_mm, y=body_mass_g))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explanation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ggplot(data = penguins):** In ggplot2, you begin a plot with the ggplot() function. The ggplot() function creates a coordinate system that you can add layers to. The first argument of the ggplot() function is the dataset to use in the plot. In this case, it’s “penguins.”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**+:** Then, you add a “+” symbol to add a new layer to your plot. You complete your plot by adding one or more layers to ggplot()."
    ]
   },
   {
