--- a/8. Simple visualization.ipynb
+++ b/8. Simple visualization.ipynb
@@ -158,6 +158,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(mapping = aes(x = flipper_length_mm, y = body_mass_g)):** Each geom function in ggplot2 takes a mapping argument. This defines how variables in your dataset are mapped to visual properties. The mapping argument is always paired with the aes() function. The x and y arguments of the aes() function specify which variables to map to the x-axis and the y-axis of the coordinate system. In this case, you want to map the variable “flipper_length_mm” to the x-axis, and the variable “body_mass_g” to the y-axis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create your own plot \n",
+    "\n",
+    "To create your own plot using code, follow these three steps:\n",
+    "\n",
+    "1. Start with the ggplot() function and choose a dataset to work with.\n",
+    "\n",
+    "2. Add a geom_ function to display your data.\n",
+    "\n",
+    "3. Map the variables you want to plot in the arguments of the aes() function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
