--- a/8. Simple visualization.ipynb
+++ b/8. Simple visualization.ipynb
@@ -221,6 +221,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in seq_len(head.end.idx):\n",
+      "\"seul le premier élément de l'argument 'length.out' est utilisé\"\n",
+      "ERROR while rich displaying an object: Error in seq_len(head.end.idx): l'argument doit être convertible automatiquement en un entier non négatif\n",
+      "\n",
+      "Traceback:\n",
+      "1. FUN(X[[i]], ...)\n",
+      "2. tryCatch(withCallingHandlers({\n",
+      " .     if (!mime %in% names(repr::mime2repr)) \n",
+      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
+      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
+      " .     if (is.null(rpr)) \n",
+      " .         return(NULL)\n",
+      " .     prepare_content(is.raw(rpr), rpr)\n",
+      " . }, error = error_handler), error = outer_handler)\n",
+      "3. tryCatchList(expr, classes, parentenv, handlers)\n",
+      "4. tryCatchOne(expr, names, parentenv, handlers[[1L]])\n",
+      "5. doTryCatch(return(expr), name, parentenv, handler)\n",
+      "6. withCallingHandlers({\n",
+      " .     if (!mime %in% names(repr::mime2repr)) \n",
+      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
+      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
+      " .     if (is.null(rpr)) \n",
+      " .         return(NULL)\n",
+      " .     prepare_content(is.raw(rpr), rpr)\n",
+      " . }, error = error_handler)\n",
+      "7. repr::mime2repr[[mime]](obj)\n",
+      "8. repr_html.help_files_with_topic(obj)\n",
+      "9. repr_help_files_with_topic_generic(obj, Rd2HTML)\n"
+     ]
+    }
+   ],
+   "source": [
+    "?geom_point"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
